# classification_project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: app.py  env.py  routes.py  types.py
api/services/: logistic_regression.py
api/test/: test_routes.py
app/: fastapi.py  streamlit_app.py
configs/: params.yaml
old_test/: test_algorithm.py
test/: test_api.py
utils/: data.py  general.py  models.py  plots.py
