[project]
name = "classification-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
